feat: set bgcolor
Signed-off-by: qwertycvb(HeeRyun, Jin <jins4218@gmail.com>

--- a/web/index.html
+++ b/web/index.html
@@ -42,7 +42,7 @@
   <script src="flutter.js" defer></script>
 </head>
 
-<body>
+<body bgcolor="#2A0920">
   <script>
     window.addEventListener('load', function (ev) {
       // Download main.dart.js
