--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "1530254032";
+    const serviceWorkerVersion = "728077230";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
 
-<body>
+<body bgcolor="#2A0920">
   <script>
     window.addEventListener('load', function (ev) {
       // Download main.dart.js
